# routeros-inspector-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
config/: devices.example.yaml
docs/: deployment.md  hermes-fixture-integration.md
scripts/: refresh_routeros_fixture.py  smoke_mcp_fixture.py
src/routeros_inspector_mcp/: __init__.py  audit_log.py  cli.py  config.py  credentials.py  redaction.py  registry.py  server.py  service.py
src/routeros_inspector_mcp/audits/: __init__.py  backup_retention.py  base.py  dead_mangle.py  dscp.py  encrypted_dns.py  mangle_queue_correlation.py  policy_backed.py  qos.py
src/routeros_inspector_mcp/backends/: base.py  fixture.py  routeros_api.py
src/routeros_inspector_mcp/examples/: policy.yaml
src/routeros_inspector_mcp/examples/fixtures/: branch-switch.json  core-switch.json
tests/: test_audit_base.py  test_audit_log.py  test_backend_fixture.py  test_cli.py  test_config.py  test_policy_audits_live_fixtures.py  test_redaction.py  test_refresh_routeros_fixture.py  test_registry.py  test_routeros_api_connections.py  test_routeros_api_tls.py  test_server_tools.py  test_service.py
tests/fixtures/routeros/: access-switch.json  edge-router.json
